// Protobuf3 version of messages_robocup_ssl_detection.proto
syntax = "proto3";
package ssl.detection;

message Ball {
  float confidence = 1;
  uint32 area = 2;
  float x = 3;
  float y = 4;
  float z = 5;
  float pixel_x = 6;
  float pixel_y = 7;  
}

message Robot {
  float confidence = 1;
  uint32 robot_id = 2;
  float x = 3;
  float y = 4;
  float orientation = 5;
  float pixel_x = 6;
  float pixel_y = 7;
  float height = 8;
}

message Frame {
  uint32 frame_number = 1;
  double t_capture = 2;
  double t_sent = 3;
  uint32 camera_id = 4;
  repeated Ball balls = 5;
  repeated Robot yellow_robots = 6;
  repeated Robot blue_robots = 7;
}
